# cloudd-rf

./: .gitignore  README.md  pyproject.toml  sagemaker-pipelines-project.ipynb  setup.py
code/: baseline_fusion.py  evaluation.py  feature_contribution.py  feature_extraction.py  plot_accuracy_vs_nuisance_params.py  preprocessing.py  requirements.txt  rl_rfe_fusion.py  team1_model.py  team2_model.py  team3_model.py  team4_model.py  train.py
code/cloudd_rf/: utils.py
code/cloudd_rf/datagen/: burst_def.py  imagedata_gen.py  iqdata_gen.py  modems.py
pipelines/cloudd_rf/: pipeline.py
scripts/: baseline_fusion.ipynb  baseline_fusion.py  data_preprocessing.ipynb  feature_contribution.ipynb  feature_contribution_analysis.py  feature_extraction.ipynb  gen.py  generate_confusion_matrices.py  model_evaluation.ipynb  plot_accuracy_vs_nuisance_params.ipynb  plot_accuracy_vs_nuisance_params.py  rl_rfe_fusion.ipynb  rl_rfe_fusion_and_analysis.py  train.py  train_team_models.ipynb
scripts/archive/: acc_vs_snr.ipynb  baseline_fusion.ipynb  feature_contribution_analysis.ipynb  feature_extraction.ipynb  gen.py  plot_accuracy_vs_nuisance_params.ipynb  rl_rfe_fusion_and_analysis.ipynb  validate_fused_models.ipynb
src/cfg/: models.py
src/datagen/: filters.py  iqdata_gen.py  modems.py
src/utils/: iq_dataset.py
